[workspace]
resolver = "2"

members = [
    "core",
    "renderer",
    "world",
    "systems",
    "game",
]
[workspace.dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.4.0"
core = { path = "./core" }
renderer = { path = "./renderer" }
world = { path = "./world" }
systems = { path = "./systems" }
game = { path = "./game" }
